--- a/code/index.html.template
+++ b/code/index.html.template
@@ -7,11 +7,10 @@
 </head>
 <body>
 
-
 <h1>DBLP feeds</h1>
 <p>
-Want to be informed about the <strong>latest papers from your favourite computer science journal or conference</strong>?  Now you can!
-Below you will find RSS feeds of <a href="http://dblp.uni-trier.de/">DBLP</a>-indexed journals and conferences.
+Want to be informed about the <strong>latest papers from your favourite computer science conference or journal</strong>?  Now you can!
+Below you will find RSS feeds of <a href="http://dblp.uni-trier.de/">DBLP</a>-indexed conferences and journals.
 </p>
 
 <p>This tiny service is written and maintained by Łukasz Bolikowski
@@ -23,21 +22,12 @@ I'm <strong>eager to hear your feedback</strong>, and please help spread the wor
 </p>
 
 <p>
-
-<a href="https://twitter.com/share" class="twitter-share-button" data-text="I follow papers at DBLP-indexed comp. sci. conferences and journals thanks to RSS feeds at http://services.ceon.pl/dblpfeeds/" data-via="bolikowski" data-count="none" data-hashtags="dblpfeeds">Tweet</a>
+<a href="https://twitter.com/share" class="twitter-share-button" data-text="I follow papers at DBLP-indexed comp. sci. conferences and journals thanks to RSS feeds at http://services.ceon.pl/dblpfeeds/" data-via="bolikowski" data-size="large" data-count="none" data-hashtags="dblpfeeds">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-
-&nbsp;
-
-<script src="//platform.linkedin.com/in.js" type="text/javascript">
- lang: en_US
-</script>
-<script type="IN/Share" data-url="http://services.ceon.pl/dblpfeeds/" data-counter="right"></script>
-
 </p>
 
-<p>Click on a journal or a conference below to subscribe to its RSS feed.
-Hint: use the find function of your browser (usually Ctrl-F or &#8984;-F) to find the name you're looking for.</p>
+<p>Click on a conference or a journal below to subscribe to its RSS feed.
+Hint: use the find function of your browser (usually Ctrl-F or &#8984;-F) to locate the name you're looking for.</p>
 
 <!-- ######### -->
 
