--- a/code/index.html.template
+++ b/code/index.html.template
@@ -12,6 +12,9 @@
 </head>
 <body>
 
+<div class="container">
+<div class="content">
+
 <h1>DBLP feeds</h1>
 <p>
 Want to be informed about the <strong>latest papers from your favourite computer science conference or journal</strong>?  Now you can!
@@ -71,6 +74,42 @@ Hint: use the find function of your browser (usually Ctrl-F or &#8984;-F) to loc
 
 <!-- ######### -->
 
+<p class="clear"/>
+</div>
+</div>
+
+<div class="footerContainer">
+  <div class="footer">
+    <div class="footerCol">
+      <h3>About</h3>
+      <ul>
+        <li><a href="http://ceon.pl/en/">Centre for Open Science</a></li>
+        <li class="long"><a href="http://www.icm.edu.pl/">Interdisciplinary Centre for Mathematical and&nbsp;Computational Modelling</a></li>
+        <li><a href="http://www.uw.edu.pl/en/">University of Warsaw</a></li>
+      </ul>
+    </div>
+    <div class="footerCol">
+      <h3>See also</h3>
+      <ul>
+        <li><a href="http://services.ceon.pl/">Other CeON services</a></li>
+        <li><a href="http://www.icm.edu.pl/~bolo">Łukasz's home page</a></li>
+      </ul>
+    </div>
+    <div class="footerCol">
+      <h3>Contact</h3>
+      <ul>
+        <li><a href="mailto:l.bolikowski@icm.edu.pl">E-mail</a></li>
+        <li><a href="https://twitter.com/bolikowski">Twitter</a></li>
+        <li><a href="http://pl.linkedin.com/in/bolikowski">LinkedIn</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="clear"></div>
+
+</div>
+
+
 <!-- UserVoice JavaScript SDK (only needed once on a page) -->
 <script>(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/tVujat52PCR7ySB7Bc8A.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})()</script>
 <!-- A tab to launch the Classic Widget -->
@@ -96,5 +135,6 @@ UserVoice.push(['showTab', 'classic_widget', {
   ga('create', 'UA-41818081-2', 'ceon.pl');
   ga('send', 'pageview');
 </script>
+
 </body>
 </html>
