--- a/code/index.html.template
+++ b/code/index.html.template
@@ -24,7 +24,7 @@ Below you will find RSS feeds of <a href="http://dblp.uni-trier.de/">DBLP</a>-in
 <p>This tiny service is written and maintained by Łukasz Bolikowski
 (<a href="mailto:l.bolikowski@icm.edu.pl">l.bolikowski@icm.edu.pl</a>,
 <a href="https://twitter.com/bolikowski">@bolikowski</a>).
-Feeds are updated nightly, based on <a href="http://dblp.uni-trier.de/xml/">XML dumps provided by DBLP</a>.
+Feeds are updated nightly, based on <a href="http://dblp.uni-trier.de/xml/">XML dumps provided by DBLP</a> (ODC-BY 1.0 license).
 Caveat emptor: due to technical limitations, you will occasionally see false positives (i.e. not-so-recent papers) in the feeds.
 This is a free/libre open source software, inspired by the <a href="http://scholrev.org/">#ScholRev</a> movement.
 Source code (BSD 2-clause license) available <a href="https://github.com/CeON/DBLPfeeds">on GitHub</a>.
